src/fratschi/flux/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  # TODO: format: name: <username>
  name: fratschi
