src/fratschi/flux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
  labels:
    app: go-service
spec:
  selector:
    app: go-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
